kubernetes/apps/default/stash/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stash
  labels: &labels
    app.kubernetes.io/part-of: stash
    app.kubernetes.io/name: stash
    app.kubernetes.io/component: server
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      <<: *labels
  template:
    metadata:
      labels:
        <<: *labels
    spec:
      restartPolicy: Always
      terminationGracePeriodSeconds: 10
      runtimeClassName: nvidia
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: stash-config
        - name: storage
          hostPath:
            path: /mnt/storage
            type: Directory
      containers:
        - name: stash
          image: stashapp/stash:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 9999
              protocol: TCP
              name: http
          volumeMounts:
            - name: storage
              mountPath: /stash
              subPath: stash
            - name: storage
              mountPath: /data
              subPath: apps/stash
            - name: config
              mountPath: /root/.stash
          resources:
            limits:
              nvidia.com/gpu.shared: 1 # requesting 1 GPU
